--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "rpch",
   "version": "1.0.0",
   "description": "rpch-node",
-  "main": "main.js",
+  "main": "rpch.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node ./main.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/gufeijun/rpch-node.git"
   },
   "keywords": [
-    "rpc"
+    "rpc",
+    "nodejs"
   ],
   "author": "gufeijun",
   "license": "ISC",
